--- a/groovy/index.html
+++ b/groovy/index.html
@@ -49,9 +49,9 @@
         var resguard_aab = "http://taugin.gitee.io/adsdk/resguard_aab.gradle"
         var resguard_apk = "http://taugin.gitee.io/adsdk/resguard_apk.gradle"
 
-        var copy_encrypt_mp = "apply from :" + encrypt_mp
-        var copy_resguard_aab = "apply from :" + resguard_aab
-        var copy_resguard_apk = "apply from :" + resguard_apk
+        var copy_encrypt_mp = "apply from :'" + encrypt_mp + "'"
+        var copy_resguard_aab = "apply from :'" + resguard_aab + "'"
+        var copy_resguard_apk = "apply from :'" + resguard_apk + "'"
     </script>
 </head>
 <body>
